@@ -8,6 +8,7 @@
 #include "definiciones.h" // Se definen las estructuras que se usan en todo el programa
 #include "empresa.h" // Funciones relativas a los cargos
 #include "empleados.h" // Funciones para manipular empleados
+#include "persona.h"
 
 #include <string.h>
 #include <stdio.h>
